--- a/keycloak-admin-rest-api-to-assign-realm-level-role-to-the-existing-user/src/main/java/com/madeeasy/readme/readme
+++ b/keycloak-admin-rest-api-to-assign-realm-level-role-to-the-existing-user/src/main/java/com/madeeasy/readme/readme
@@ -166,7 +166,8 @@
   ]
 Good Luck you have added role to the user....
 
-Note if you want to play with the user and all the required actions you can check this link https://www.npmjs.com/package/keycloak-admin
+Note if you want to play with the user and all the required actions you can check this link https://www.npmjs.com/package/keycloak-admin and 
+https://documenter.getpostman.com/view/7294517/SzmfZHnd
 
 
 
